--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-api-base",
+  "name": "service-order-api",
   "version": "1.0.0",
   "scripts": {
     "dev": "ts-node src/server.ts"
