--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "service-order-api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "ts-node src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "seed": "ts-node prisma/seed.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
@@ -19,9 +23,14 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.27",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.4",
     "prisma": "^6.12.0",
+    "supertest": "^7.1.3",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
