--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
   }
 }
