--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "service-order-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "seed": "ts-node prisma/seed.ts",
-    "test": "jest"
+    "test": "jest",
+    "release": "standard-version",
+    "prepare": "husky"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
@@ -21,6 +23,8 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -30,8 +34,10 @@
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "husky": "^9.1.7",
     "jest": "^30.0.4",
     "prisma": "^6.12.0",
+    "standard-version": "^9.5.0",
     "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
